--- a/index.html
+++ b/index.html
@@ -9,7 +9,36 @@
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 <link rel="apple-touch-icon" sizes="180x180" href="/favicon.ico">
 
-<title>Kaido - Watch Free Anime</title>
+    <style>
+    .wrap #player {
+        position: absolute;
+        height: 100% !important;
+        weight: 100 !important;
+    }
+
+    .wrap .btn {
+        position: absolute;
+        top: 15%;
+        left: 90%;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        background-color: white;
+        color: black;
+        font-size: 12px;
+        padding: 6px 12px;
+        border: 1px solid white;
+        cursor: pointer;
+        border-radius: 5px;
+    }
+
+    @media screen and (max-width:600px) {
+        .wrap .btn {
+            font-size: 08px;
+        }
+    }
+      </style>
+  
+<title>Zoro.to-clone - Watch Free Anime</title>
 </head>
 
 <body>
